# google-sharp

./: .gitignore  ChangeLog  configure.ac
docs/: Makefile.am  Mono.Google.source  README
docs/Mono.Google/: Mono.Google.Picasa.xml  Mono.Google.xml  index.xml
docs/Mono.Google/Mono.Google/: CaptchaException.xml  GoogleConnection.xml  GoogleService.xml  NoCheckCertificatePolicy.xml
docs/Mono.Google/Mono.Google.Picasa/: AlbumAccess.xml  CreateAlbumException.xml  DeleteAlbumException.xml  PicasaAlbum.xml  PicasaAlbumCollection.xml  PicasaPicture.xml  PicasaPictureCollection.xml  PicasaWeb.xml  UploadPictureException.xml  UploadProgressEventArgs.xml  UploadProgressEventHandler.xml
sample/: Makefile.am  create-album.cs  list-albums.cs  tag-image.cs  upload-image.cs  upload-images.cs
src/: .gitignore  Makefile.am  mono-google.pc.in
src/Mono.Google/: AssemblyInfo.cs.in  AuthErrorCode.cs  Authentication.cs  GoogleConnection.cs  Makefile.am  MultipartRequest.cs
src/Mono.Google.Picasa/: Makefile.am  PicasaAlbum.cs  PicasaAlbumCollection.cs  PicasaPicture.cs  PicasaPictureCollection.cs  PicasaV1.cs  PicasaWeb.cs
