EXTRA_DIST=\
		AlbumAccess.cs \
		CreateAlbumException.cs \
		DeleteAlbumException.cs \
		PicasaAlbum.cs \
		PicasaAlbumCollection.cs \
		PicasaPicture.cs \
		PicasaPictureCollection.cs \
		GDataApi.cs \
		PicasaWeb.cs \
		UploadPictureException.cs \
		UploadProgressEventArgs.cs \
		UploadProgressEventHandler.cs \
		XmlUtil.cs

